--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -8,7 +8,15 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np \n",
+    "import pandas as pd \n",
+    "\n",
+    "import os\n",
+    "for dirname, _, filenames in os.walk('.\\input'):\n",
+    "    for filename in filenames:\n",
+    "        print(os.path.join(dirname, filename))"
+   ]
   }
  ],
  "metadata": {
