--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -12,6 +12,29 @@
     "import numpy as np \n",
     "import pandas as pd "
    ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "for dirname, _, filenames in os.walk('.\\input'):\n",
+    "    for filename in filenames:\n",
+    "        print(os.path.join(dirname, filename))"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e02f846c1a63f12c"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "700aa5f7824726d3"
   }
  ],
  "metadata": {
