--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -30,7 +30,22 @@
   {
    "cell_type": "code",
    "outputs": [],
-   "source": [],
+   "source": [
+    "# Directory with our training horse pictures\n",
+    "a_dir = os.path.join('./input/MangoFruitDDS/SenMangoFruitDDS_original/Alternaria')\n",
+    "\n",
+    "# Directory with our training human pictures\n",
+    "b_dir = os.path.join('./input/MangoFruitDDS/SenMangoFruitDDS_original/Anthracnose')\n",
+    "\n",
+    "# Directory with our training horse pictures\n",
+    "c_dir = os.path.join('./input/MangoFruitDDS/SenMangoFruitDDS_original/Black Mould Rot')\n",
+    "\n",
+    "# Directory with our training human pictures\n",
+    "d_dir = os.path.join('./input/MangoFruitDDS/SenMangoFruitDDS_original/Healthy')\n",
+    "\n",
+    "# Directory with our training horse pictures\n",
+    "e_dir = os.path.join('./input/MangoFruitDDS/SenMangoFruitDDS_original/Stem end Rot')"
+   ],
    "metadata": {
     "collapsed": false
    },
