--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -50,6 +50,26 @@
     "collapsed": false
    },
    "id": "700aa5f7824726d3"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "a_names = os.listdir(a_dir)\n",
+    "print(a_names[:10])\n",
+    "b_names = os.listdir(b_dir)\n",
+    "print(b_names[:10])\n",
+    "c_names = os.listdir(c_dir)\n",
+    "print(c_names[:10])\n",
+    "d_names = os.listdir(d_dir)\n",
+    "print(d_names[:10])\n",
+    "e_names = os.listdir(e_dir)\n",
+    "print(e_names[:10])"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f10ab2075ab487f3"
   }
  ],
  "metadata": {
