--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -70,6 +70,27 @@
     "collapsed": false
    },
    "id": "f10ab2075ab487f3"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
+    "\n",
+    "# Parameters for our graph; we'll output images in a 4x4 configuration\n",
+    "nrows = 10\n",
+    "ncols = 4\n",
+    "\n",
+    "# Index for iterating over images\n",
+    "pic_index = 0"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6e1f6e69e5ec63c8"
   }
  ],
  "metadata": {
