--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -91,6 +91,37 @@
     "collapsed": false
    },
    "id": "6e1f6e69e5ec63c8"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# Set up matplotlib fig, and size it to fit 4x4 pics\n",
+    "fig = plt.gcf()\n",
+    "fig.set_size_inches(ncols * 4, nrows * 4)\n",
+    "\n",
+    "pic_index += 8\n",
+    "a_pix = [os.path.join(a_dir, fname)\n",
+    "                for fname in a_names[pic_index-8:pic_index]]\n",
+    "b_pix = [os.path.join(b_dir, fname)\n",
+    "                for fname in b_names[pic_index-8:pic_index]]\n",
+    "c_pix = [os.path.join(c_dir, fname)\n",
+    "                for fname in c_names[pic_index-8:pic_index]]\n",
+    "d_pix = [os.path.join(d_dir, fname)\n",
+    "                for fname in d_names[pic_index-8:pic_index]]\n",
+    "e_pix = [os.path.join(e_dir, fname)\n",
+    "                for fname in e_names[pic_index-8:pic_index]]\n",
+    "\n",
+    "for i, img_path in enumerate(a_pix + b_pix + c_pix + d_pix + e_pix):\n",
+    "  sp = plt.subplot(nrows, ncols, (i % (nrows * ncols)) + 1)\n",
+    "  sp.axis('Off')\n",
+    "  img = mpimg.imread(img_path)\n",
+    "  plt.imshow(img)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "40fc24a09d9af28"
   }
  ],
  "metadata": {
