--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -75,6 +75,21 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
+    "print('total Alternaria images:', len(os.listdir(a_dir)))\n",
+    "print('total Anthracnose images:', len(os.listdir(b_dir)))\n",
+    "print('total Black Mould Rot images:', len(os.listdir(c_dir)))\n",
+    "print('total Healthy images:', len(os.listdir(a_dir)))\n",
+    "print('total Stem end Rot images:', len(os.listdir(a_dir)))"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "56ed969c107b98ee"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
     "%matplotlib inline\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
