--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -137,6 +137,33 @@
     "collapsed": false
    },
    "id": "40fc24a09d9af28"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "data_dir = './input/MangoFruitDDS/SenMangoFruitDDS_original'\n",
+    "batch_size = 64\n",
+    "epochs = 30\n",
+    "input_shape = (300, 300, 3)\n",
+    "image_paths = []\n",
+    "labels = []\n",
+    "\n",
+    "for category in os.listdir(data_dir):\n",
+    "    category_dir = os.path.join(data_dir, category)\n",
+    "    if os.path.isdir(category_dir):\n",
+    "        for image_filename in os.listdir(category_dir):\n",
+    "            if image_filename.endswith('.jpg'):\n",
+    "                image_path = os.path.join(category_dir, image_filename)\n",
+    "                image_paths.append(image_path)\n",
+    "                labels.append(category)\n",
+    "train_image_paths, test_image_paths, train_labels, test_labels = train_test_split(image_paths, labels, test_size=0.2, random_state=42)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f83cdcfdc3ce1508"
   }
  ],
  "metadata": {
