--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -164,6 +164,17 @@
     "collapsed": false
    },
    "id": "f83cdcfdc3ce1508"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "len(train_image_paths),len(test_image_paths), len(train_labels), len(test_labels)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "67855c8f8609b5ec"
   }
  ],
  "metadata": {
