--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -201,6 +201,17 @@
     "collapsed": false
    },
    "id": "434d31ec9dbb2f74"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "model.summary()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1e485e6fc03cb1ee"
   }
  ],
  "metadata": {
