--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -212,6 +212,21 @@
     "collapsed": false
    },
    "id": "1e485e6fc03cb1ee"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.optimizers import RMSprop\n",
+    "\n",
+    "model.compile(loss='categorical_crossentropy',\n",
+    "              optimizer=RMSprop(learning_rate=0.001),\n",
+    "              metrics=['accuracy'])"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f10f95d3949a2c0e"
   }
  ],
  "metadata": {
