--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -227,6 +227,47 @@
     "collapsed": false
    },
    "id": "f10f95d3949a2c0e"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "\n",
+    "training_datagen = ImageDataGenerator(\n",
+    "      rescale = 1./255,\n",
+    "      rotation_range=40,\n",
+    "      width_shift_range=0.2,\n",
+    "      height_shift_range=0.2,\n",
+    "      shear_range=0.2,\n",
+    "      zoom_range=0.2,\n",
+    "      horizontal_flip=True,\n",
+    "      fill_mode='nearest')\n",
+    "\n",
+    "validation_datagen = ImageDataGenerator(rescale = 1./255)\n",
+    "\n",
+    "train_generator = training_datagen.flow_from_dataframe(\n",
+    "    pd.DataFrame({'image_path': train_image_paths, 'label': train_labels}),\n",
+    "    x_col='image_path',\n",
+    "    y_col='label',\n",
+    "    target_size=(150,150),\n",
+    "    batch_size=64,\n",
+    "    class_mode='categorical'\n",
+    ")\n",
+    "\n",
+    "validation_generator = validation_datagen.flow_from_dataframe(\n",
+    "    pd.DataFrame({'image_path': test_image_paths, 'label': test_labels}),\n",
+    "    x_col='image_path',\n",
+    "    y_col='label',\n",
+    "    target_size=(150,150),\n",
+    "    batch_size=64,\n",
+    "    class_mode='categorical'\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "527dcd9643dafcf9"
   }
  ],
  "metadata": {
