--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -268,6 +268,17 @@
     "collapsed": false
    },
    "id": "527dcd9643dafcf9"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "history = model.fit(train_generator, epochs=30, steps_per_epoch=8, validation_data = validation_generator, verbose = 1, validation_steps=3)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2f421c2e6c17acdc"
   }
  ],
  "metadata": {
