--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -279,6 +279,39 @@
     "collapsed": false
    },
    "id": "2f421c2e6c17acdc"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Plot the results\n",
+    "acc = history.history['accuracy']\n",
+    "val_acc = history.history['val_accuracy']\n",
+    "loss = history.history['loss']\n",
+    "val_loss = history.history['val_loss']\n",
+    "\n",
+    "epochs = range(len(acc))\n",
+    "\n",
+    "plt.plot(epochs, acc, 'r', label='Training accuracy')\n",
+    "plt.plot(epochs, val_acc, 'b', label='Validation accuracy')\n",
+    "plt.title('Training and validation accuracy')\n",
+    "plt.legend(loc=0)\n",
+    "plt.figure()\n",
+    "\n",
+    "plt.plot(epochs, loss, 'r', label='Training loss')\n",
+    "plt.plot(epochs, val_loss, 'b', label='Validation loss')\n",
+    "plt.title('Training and validation Loss')\n",
+    "plt.legend(loc=0)\n",
+    "plt.figure()\n",
+    "\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "3a9967dc66f30cc2"
   }
  ],
  "metadata": {
