--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -312,6 +312,17 @@
     "collapsed": false
    },
    "id": "3a9967dc66f30cc2"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "model.save('mango.h5')"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "717711ac317071"
   }
  ],
  "metadata": {
