--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -317,7 +317,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "model.save('mango.h5')"
+    "model.save('new_mango.h5')"
    ],
    "metadata": {
     "collapsed": false
