--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "for dirname, _, filenames in os.walk('.\\input'):\n",
+    "for dirname, _, filenames in os.walk('.\\dataset'):\n",
     "    for filename in filenames:\n",
     "        print(os.path.join(dirname, filename))"
    ],
