--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# Directory with our training horse pictures\n",
+    "# Directory with our training healthy pictures\n",
     "a_dir = os.path.join('./input/MangoFruitDDS/SenMangoFruitDDS_original/Alternaria')\n",
     "\n",
     "# Directory with our training human pictures\n",
