--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -34,7 +34,7 @@
     "# Directory with our training healthy pictures\n",
     "a_dir = os.path.join('./input/MangoFruitDDS/SenMangoFruitDDS_original/Alternaria')\n",
     "\n",
-    "# Directory with our training human pictures\n",
+    "# Directory with our training not healthy pictures\n",
     "b_dir = os.path.join('./input/MangoFruitDDS/SenMangoFruitDDS_original/Anthracnose')"
    ],
    "metadata": {
