--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "# Directory with our training healthy pictures\n",
-    "a_dir = os.path.join('./input/MangoFruitDDS/SenMangoFruitDDS_original/Alternaria')\n",
+    "a_dir = os.path.join('./ataset/consumable')\n",
     "\n",
     "# Directory with our training not healthy pictures\n",
     "b_dir = os.path.join('./input/MangoFruitDDS/SenMangoFruitDDS_original/Anthracnose')"
