--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -35,7 +35,7 @@
     "a_dir = os.path.join('./ataset/consumable')\n",
     "\n",
     "# Directory with our training not healthy pictures\n",
-    "b_dir = os.path.join('./input/MangoFruitDDS/SenMangoFruitDDS_original/Anthracnose')"
+    "b_dir = os.path.join('./ataset/not_consumable')"
    ],
    "metadata": {
     "collapsed": false
