--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -32,10 +32,10 @@
    "outputs": [],
    "source": [
     "# Directory with our training healthy pictures\n",
-    "a_dir = os.path.join('./ataset/consumable')\n",
+    "a_dir = os.path.join('./dataset/consumable')\n",
     "\n",
     "# Directory with our training not healthy pictures\n",
-    "b_dir = os.path.join('./ataset/not_consumable')"
+    "b_dir = os.path.join('./dataset/not_consumable')"
    ],
    "metadata": {
     "collapsed": false
