--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -49,13 +49,7 @@
     "a_names = os.listdir(a_dir)\n",
     "print(a_names[:10])\n",
     "b_names = os.listdir(b_dir)\n",
-    "print(b_names[:10])\n",
-    "c_names = os.listdir(c_dir)\n",
-    "print(c_names[:10])\n",
-    "d_names = os.listdir(d_dir)\n",
-    "print(d_names[:10])\n",
-    "e_names = os.listdir(e_dir)\n",
-    "print(e_names[:10])"
+    "print(b_names[:10])"
    ],
    "metadata": {
     "collapsed": false
