--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -60,7 +60,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "print('total Alternaria images:', len(os.listdir(a_dir)))\n",
+    "print('total healthy images:', len(os.listdir(a_dir)))\n",
     "print('total Anthracnose images:', len(os.listdir(b_dir)))"
    ],
    "metadata": {
