--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "print('total healthy images:', len(os.listdir(a_dir)))\n",
-    "print('total Anthracnose images:', len(os.listdir(b_dir)))"
+    "print('total non-healthy images:', len(os.listdir(b_dir)))"
    ],
    "metadata": {
     "collapsed": false
