--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -103,7 +103,7 @@
     "b_pix = [os.path.join(b_dir, fname)\n",
     "                for fname in b_names[pic_index-8:pic_index]]\n",
     "\n",
-    "for i, img_path in enumerate(a_pix + b_pix + c_pix + d_pix + e_pix):\n",
+    "for i, img_path in enumerate(a_pix + b_pix):\n",
     "  sp = plt.subplot(nrows, ncols, (i % (nrows * ncols)) + 1)\n",
     "  sp.axis('Off')\n",
     "  img = mpimg.imread(img_path)\n",
