--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -119,7 +119,7 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "data_dir = './input/MangoFruitDDS/SenMangoFruitDDS_original'\n",
+    "data_dir = './dataset'\n",
     "batch_size = 64\n",
     "epochs = 30\n",
     "input_shape = (300, 300, 3)\n",
