--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -182,6 +182,28 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from joblib import dump\n",
+    "\n",
+    "# Create a label encoder\n",
+    "label_encoder = LabelEncoder()\n",
+    "\n",
+    "# Fit the encoder with your labels\n",
+    "# Assuming `labels` is your list of labels\n",
+    "label_encoder.fit(labels)\n",
+    "\n",
+    "# Save the encoder\n",
+    "dump(label_encoder, 'label_encoder.joblib')"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d7ca7a0c79f0683a"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
     "model.summary()"
    ],
    "metadata": {
