--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -10,7 +10,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import pandas as pd "
+    "import pandas as pd \n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
