--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -11,7 +11,8 @@
    "source": [
     "import os\n",
     "import pandas as pd \n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "import tensorflow as tf\n"
    ]
   },
   {
