--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -12,7 +12,9 @@
     "import os\n",
     "import pandas as pd \n",
     "from sklearn.model_selection import train_test_split\n",
-    "import tensorflow as tf\n"
+    "import tensorflow as tf\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from joblib import dump"
    ]
   },
   {
