--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -14,7 +14,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "import tensorflow as tf\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from joblib import dump"
+    "from joblib import dump\n",
+    "from tensorflow.keras.optimizers import RMSprop\n"
    ]
   },
   {
