--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -15,7 +15,8 @@
     "import tensorflow as tf\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from joblib import dump\n",
-    "from tensorflow.keras.optimizers import RMSprop\n"
+    "from tensorflow.keras.optimizers import RMSprop\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
    ]
   },
   {
