--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -16,7 +16,8 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "from joblib import dump\n",
     "from tensorflow.keras.optimizers import RMSprop\n",
-    "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
