--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -991,9 +991,14 @@
     "b_dir = os.path.join('./dataset/not_consumable')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-27T05:33:12.424025800Z",
+     "start_time": "2024-01-27T05:33:12.418628900Z"
+    }
    },
-   "id": "700aa5f7824726d3"
+   "id": "700aa5f7824726d3",
+   "execution_count": 3
   },
   {
    "cell_type": "code",
