--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -988,7 +988,7 @@
     "a_dir = os.path.join('./dataset/consumable')\n",
     "\n",
     "# Directory with our training not healthy pictures\n",
-    "b_dir = os.path.join('./dataset/not_consumable')"
+    "b_dir = os.path.join('./dataset/not consumable')"
    ],
    "metadata": {
     "collapsed": false,
@@ -1002,7 +1002,26 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['alternaria_013.jpg', 'alternaria_014.jpg', 'alternaria_032.jpg', 'alternaria_040.jpg', 'alternaria_045.jpg', 'alternaria_046.jpg', 'alternaria_056.jpg', 'alternaria_058.jpg', 'alternaria_069.jpg', 'alternaria_122.jpg']\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] The system cannot find the path specified: './dataset/not_consumable'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[4], line 3\u001B[0m\n\u001B[0;32m      1\u001B[0m a_names \u001B[38;5;241m=\u001B[39m os\u001B[38;5;241m.\u001B[39mlistdir(a_dir)\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28mprint\u001B[39m(a_names[:\u001B[38;5;241m10\u001B[39m])\n\u001B[1;32m----> 3\u001B[0m b_names \u001B[38;5;241m=\u001B[39m \u001B[43mos\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mlistdir\u001B[49m\u001B[43m(\u001B[49m\u001B[43mb_dir\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      4\u001B[0m \u001B[38;5;28mprint\u001B[39m(b_names[:\u001B[38;5;241m10\u001B[39m])\n",
+      "\u001B[1;31mFileNotFoundError\u001B[0m: [WinError 3] The system cannot find the path specified: './dataset/not_consumable'"
+     ]
+    }
+   ],
    "source": [
     "a_names = os.listdir(a_dir)\n",
     "print(a_names[:10])\n",
@@ -1010,9 +1029,14 @@
     "print(b_names[:10])"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-27T05:33:16.508654500Z",
+     "start_time": "2024-01-27T05:33:15.005994200Z"
+    }
    },
-   "id": "f10ab2075ab487f3"
+   "id": "f10ab2075ab487f3",
+   "execution_count": 4
   },
   {
    "cell_type": "code",
