--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -993,12 +993,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T05:33:12.424025800Z",
-     "start_time": "2024-01-27T05:33:12.418628900Z"
+     "end_time": "2024-01-27T05:33:25.954163400Z",
+     "start_time": "2024-01-27T05:33:25.949919800Z"
     }
    },
    "id": "700aa5f7824726d3",
-   "execution_count": 3
+   "execution_count": 5
   },
   {
    "cell_type": "code",
@@ -1007,18 +1007,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['alternaria_013.jpg', 'alternaria_014.jpg', 'alternaria_032.jpg', 'alternaria_040.jpg', 'alternaria_045.jpg', 'alternaria_046.jpg', 'alternaria_056.jpg', 'alternaria_058.jpg', 'alternaria_069.jpg', 'alternaria_122.jpg']\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 3] The system cannot find the path specified: './dataset/not_consumable'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[4], line 3\u001B[0m\n\u001B[0;32m      1\u001B[0m a_names \u001B[38;5;241m=\u001B[39m os\u001B[38;5;241m.\u001B[39mlistdir(a_dir)\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28mprint\u001B[39m(a_names[:\u001B[38;5;241m10\u001B[39m])\n\u001B[1;32m----> 3\u001B[0m b_names \u001B[38;5;241m=\u001B[39m \u001B[43mos\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mlistdir\u001B[49m\u001B[43m(\u001B[49m\u001B[43mb_dir\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      4\u001B[0m \u001B[38;5;28mprint\u001B[39m(b_names[:\u001B[38;5;241m10\u001B[39m])\n",
-      "\u001B[1;31mFileNotFoundError\u001B[0m: [WinError 3] The system cannot find the path specified: './dataset/not_consumable'"
+      "['alternaria_013.jpg', 'alternaria_014.jpg', 'alternaria_032.jpg', 'alternaria_040.jpg', 'alternaria_045.jpg', 'alternaria_046.jpg', 'alternaria_056.jpg', 'alternaria_058.jpg', 'alternaria_069.jpg', 'alternaria_122.jpg']\n",
+      "['alternaria_001.jpg', 'alternaria_002.jpg', 'alternaria_003.jpg', 'alternaria_004.jpg', 'alternaria_005.jpg', 'alternaria_006.jpg', 'alternaria_007.jpg', 'alternaria_008.jpg', 'alternaria_009.jpg', 'alternaria_010.jpg']\n"
      ]
     }
    ],
@@ -1031,12 +1021,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T05:33:16.508654500Z",
-     "start_time": "2024-01-27T05:33:15.005994200Z"
+     "end_time": "2024-01-27T05:33:27.043098800Z",
+     "start_time": "2024-01-27T05:33:27.036525500Z"
     }
    },
    "id": "f10ab2075ab487f3",
-   "execution_count": 4
+   "execution_count": 6
   },
   {
    "cell_type": "code",
