--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -1030,15 +1030,29 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total healthy images: 261\n",
+      "total non-healthy images: 670\n"
+     ]
+    }
+   ],
    "source": [
     "print('total healthy images:', len(os.listdir(a_dir)))\n",
     "print('total non-healthy images:', len(os.listdir(b_dir)))"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-27T05:33:29.170728400Z",
+     "start_time": "2024-01-27T05:33:29.161911400Z"
+    }
    },
-   "id": "56ed969c107b98ee"
+   "id": "56ed969c107b98ee",
+   "execution_count": 7
   },
   {
    "cell_type": "code",
