--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -1141,9 +1141,14 @@
     "train_image_paths, test_image_paths, train_labels, test_labels = train_test_split(image_paths, labels, test_size=0.2, random_state=42)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-27T05:33:41.159859600Z",
+     "start_time": "2024-01-27T05:33:41.143070800Z"
+    }
    },
-   "id": "f83cdcfdc3ce1508"
+   "id": "f83cdcfdc3ce1508",
+   "execution_count": 10
   },
   {
    "cell_type": "code",
