--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -1152,14 +1152,28 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(739, 185, 739, 185)"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(train_image_paths),len(test_image_paths), len(train_labels), len(test_labels)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-27T05:33:46.428975100Z",
+     "start_time": "2024-01-27T05:33:46.413389300Z"
+    }
    },
-   "id": "67855c8f8609b5ec"
+   "id": "67855c8f8609b5ec",
+   "execution_count": 11
   },
   {
    "cell_type": "code",
