--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -1206,7 +1206,16 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['label_encoder.joblib']"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a label encoder\n",
     "label_encoder = LabelEncoder()\n",
@@ -1219,9 +1228,14 @@
     "dump(label_encoder, 'label_encoder.joblib')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-27T05:33:50.951547100Z",
+     "start_time": "2024-01-27T05:33:50.866631600Z"
+    }
    },
-   "id": "d7ca7a0c79f0683a"
+   "id": "d7ca7a0c79f0683a",
+   "execution_count": 13
   },
   {
    "cell_type": "code",
