--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -1239,14 +1239,63 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d (Conv2D)             (None, 148, 148, 64)      1792      \n",
+      "                                                                 \n",
+      " max_pooling2d (MaxPooling2D  (None, 74, 74, 64)       0         \n",
+      " )                                                               \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 72, 72, 64)        36928     \n",
+      "                                                                 \n",
+      " max_pooling2d_1 (MaxPooling  (None, 36, 36, 64)       0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " conv2d_2 (Conv2D)           (None, 34, 34, 128)       73856     \n",
+      "                                                                 \n",
+      " max_pooling2d_2 (MaxPooling  (None, 17, 17, 128)      0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " conv2d_3 (Conv2D)           (None, 15, 15, 128)       147584    \n",
+      "                                                                 \n",
+      " max_pooling2d_3 (MaxPooling  (None, 7, 7, 128)        0         \n",
+      " 2D)                                                             \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 6272)              0         \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, 6272)              0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 512)               3211776   \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 5)                 2565      \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 3,474,501\n",
+      "Trainable params: 3,474,501\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model.summary()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-27T05:34:07.009114100Z",
+     "start_time": "2024-01-27T05:34:06.982235400Z"
+    }
    },
-   "id": "1e485e6fc03cb1ee"
+   "id": "1e485e6fc03cb1ee",
+   "execution_count": 14
   },
   {
    "cell_type": "code",
