--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -1306,9 +1306,14 @@
     "              metrics=['accuracy'])"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-27T05:34:12.312874900Z",
+     "start_time": "2024-01-27T05:34:12.292994500Z"
+    }
    },
-   "id": "f10f95d3949a2c0e"
+   "id": "f10f95d3949a2c0e",
+   "execution_count": 15
   },
   {
    "cell_type": "code",
