--- a/new_improved_cnn.ipynb
+++ b/new_improved_cnn.ipynb
@@ -1317,7 +1317,16 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 739 validated image filenames belonging to 2 classes.\n",
+      "Found 185 validated image filenames belonging to 2 classes.\n"
+     ]
+    }
+   ],
    "source": [
     "training_datagen = ImageDataGenerator(\n",
     "      rescale = 1./255,\n",
@@ -1350,9 +1359,14 @@
     ")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-27T05:34:14.421566200Z",
+     "start_time": "2024-01-27T05:34:14.329048300Z"
+    }
    },
-   "id": "527dcd9643dafcf9"
+   "id": "527dcd9643dafcf9",
+   "execution_count": 16
   },
   {
    "cell_type": "code",
