--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "# Load the saved model\n",
-    "model = tf.keras.models.load_model('mango.h5')"
+    "model = tf.keras.models.load_model('new_mango.h5')"
    ],
    "metadata": {
     "collapsed": false,
