--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
+    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2023-12-20T04:55:13.277333200Z",
-     "start_time": "2023-12-20T04:55:10.088231900Z"
+     "start_time": "2024-01-27T05:47:13.863288400Z"
     }
    },
    "outputs": [],
@@ -138,6 +138,28 @@
     }
    },
    "id": "1dcb08c2183bb237"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Assuming actual_class is the actual class of the image\n",
+    "actual_class = [1]  # replace with the actual class of your image\n",
+    "\n",
+    "# Convert predicted_class to list and compare with actual_class\n",
+    "predicted_class = [predicted_class]\n",
+    "\n",
+    "# Calculate accuracy\n",
+    "accuracy = accuracy_score(actual_class, predicted_class)\n",
+    "\n",
+    "print(\"Accuracy: \", accuracy)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c0f9ca6ec879eae4"
   }
  ],
  "metadata": {
